wrappers/C/_rrc_api.h

/*!
 \brief Initialize a new roadRunner instance and return a handle to it.
 \return Returns a RoadRunner instance, returns null if it fails
 \ingroup initialization
*/
C_DECL_SPEC RRHandle rrcCallConv createRRInstance(void);
/*!
 \brief Load a model from a SBML file
 \param[in] handle Handle to a RoadRunner instance
 \param[in] fileName file name (or full path) to file that holds the SBML model
 \return Returns true if successful
 \ingroup loadsave
*/
//C_DECL_SPEC bool rrcCallConv loadSBMLFromFile(const char* fileName);
C_DECL_SPEC bool rrcCallConv loadSBMLFromFile(RRHandle handle, const char* fileName);
/*!
 \brief Carry out a time-course simulation. setTimeStart, setTimeEnd,
 setNumPoints, etc are used to set the simulation characteristics.

 \param[in] handle Handle to a RoadRunner instance
 \return Returns an array (RRCDataPtr) of columns containing the results of the
 simulation including string labels for the individual columns. The client is
 responsible for freeing the resulting RRCDataPtr structure.
 \ingroup simulation
*/
C_DECL_SPEC RRCDataPtr rrcCallConv simulate(RRHandle handle);
/*!
 \brief Retrieve the result of the last simulation.
 \param[in] handle Handle to a RoadRunner instance
 \return Returns an array (RRCDataPtr) of columns containing the results of the
 simulation including string labels for the individual columns. The client is
 responsible for freeing the resulting RRCDataPtr structure.
 \ingroup simulation
*/
C_DECL_SPEC RRCDataPtr rrcCallConv getSimulationResult(RRHandle handle);