wrappers/C/rrc_utilities.h

/*!
 \brief Retrieve an element at a given row and column from a matrix type variable

 Matrices are indexed from zero

 Example:
 \code
 status = getMatrixElement (m, 2, 4, &value);
 \endcode

 \param[in] m A pointer to a matrix type variable
 \param[in] r The row index to the matrix
 \param[in] c The column index to the matrix
 \param[out] value The retrieved value from the matrix
 \return Returns True if successful
 \ingroup helperRoutines
*/
C_DECL_SPEC int rrcCallConv getMatrixElement (RRDoubleMatrixPtr m, int r, int c, double* value);
/*!
 \brief Retrieve the number of rows in the given RoadRunner numerical data (returned from simulate(RRHandle handle))

 Example: \code nRows = getRRDataNumRows (result); \endcode

 \param[in] rrData A pointer to a RoadRunner numerical data type variable
 \return Returns -1 if fails, otherwise returns the number of rows
 \ingroup helperRoutines
*/
C_DECL_SPEC int rrcCallConv getRRDataNumRows (RRCDataPtr rrData);
/*!
 \brief Retrieve the number of columns in the given rrData data (returned form simulate(RRHandle handle))

 Example: \code nRows = getResultNumCols (rrData); \endcode

 \param[in] rrData A pointer to a rrData type variable
 \return Returns -1 if fails, otherwise returns the number of columns
 \ingroup helperRoutines
*/
C_DECL_SPEC int rrcCallConv getRRDataNumCols (RRCDataPtr rrData);